Updated Service Ticket Post and added PATH and Definition in SWAGGER
